# snake_game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json
.cache/clangd/index/: game.cpp.7AD23D6F2C8BE800.idx  game.h.7C3F893F1BA1D6B2.idx  main.cpp.497F5E51D6F6DFA5.idx  settings.h.8EC8DF40D4D5571F.idx
src/: display.cpp  display.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  object.cpp  object.h  settings.h  snake.cpp  snake.h  snake_game.sublime-workspace
